clean up with spotbugs